# pysystemtrade

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  DONE_TO_DO.md  MANIFEST.in  README.md  TaxReport.txt  US5  ac1.p  ac2.p  ac3.p  compose.yml  correlations.csv  forecast_strength.p  install_dependencies_apple_silicon.sh  instrument_weights.yaml  log_.txt  mkdocs.yml  my_change_log.md  mygitpull  mygitpush  pandas_upgrade.md  pyproject.toml  pytest.ini  requirements.txt  requirements_apple_silicon.txt  restats  returns.csv  setup.py  sp500_hourly  temp.csv  tox.ini  us5_carry
command_line/: futures_system_cli.py
dashboard/: app.py
docs/: FAQ.md  IB.md  Makefile  backtesting.md  changelog.md  contributing.md  dashboard.md  dashboard_and_monitor.md  data.md  developer  futures.md  index.md  installation.md  instruments.md  introduction.md  list_of_futures_product_pages.md  make.bat  private_config_example.yaml  production.md  production_strategy_changes.md  recent_changes.md  tutorial  userguide.md
examples/: SGCTA.csv  skew.py  temp.py
private/: data.csv  futures_system_cli.py
program/: check_ib_connection_insync.py  connect_mongo.py  private.this_system_name.config.yaml  sample.py  sample_2.py
sysbrokers/: baseClient.py  baseServer.py  broker_capital_data.py  broker_commissions.py  broker_contract_commission_data.py  broker_contract_position_data.py  broker_execution_stack.py  broker_factory.py  broker_futures_contract_data.py  broker_futures_contract_price_data.py  broker_fx_handling.py  broker_fx_prices_data.py  broker_instrument_data.py  broker_static_data.py  broker_trade.py  ibClient.py  ibServer.py
syscontrol/: control_config.yaml  data_interface.py  data_objects.py  list_running_pids.py  mongo_process_control.py  monitor.py  process_control_data.py  report_process_status.py  run_process.py  strategy_tools.py  timer_functions.py  timer_parameters.py
syscore/: accounting.py  algos.py  cache.py  capital.py  constants.py  correlations.py  dateutils.py  divmultipliers.py  exceptions.py  fileutils.py  genutils.py  handcrafting.py  interactive.py  interactive_input.py  interactive_menus.py  interactively_run_functions.py  maths.py  merge_data.py  objects.py  optimisation.py  optimisation_utils.py  pdutils.py  progress_bar.py  text.py  yaml.py
sysdata/: base_data.py  configdata.py  csvdata.py  data.py  data_blob.py  futuresdata.py  legacy.py  pointers.py  private_config.py  quandl.py  randomdata.py  sim_data.py
sysexecution/: base_orders.py  broker_orders.py  contract_orders.py  fill_price.py  fills.py  instrument_orders.py  instrument_to_contract_stack_handler.py  order_stack.py  price_quotes.py  roll_orders.py  spawn_children_from_instrument_orders.py  strategy_order_handling.py  tick_data.py  trade_qty.py
syslogdiag/: database_log.py  echos.py  email_control.py  email_via_db_interface.py  emailing.py  log.py  log_entry.py  log_to_file.py  log_to_screen.py  logger.py  mongo_email_control.py  pst_logger.py
syslogging/: __init__.py  adapter.py  handlers.py  logger.py  logging_prod.yaml  logging_prod_v2.yaml  logging_sim.yaml  pyyaml_env.py  server.py
sysobjects/: adjusted_prices.py  carry_data.py  contract_dates_and_expiries.py  contracts.py  dict_of_futures_per_contract_prices.py  dict_of_named_futures_per_contract_prices.py  fills.py  futures_per_contract_prices.py  instruments.py  multiple_prices.py  orders.py  roll_calendars.py  roll_parameters_with_price_data.py  rolls.py  spot_fx_prices.py  spreads.py
sysproduction/: backup_arctic_to_csv.py  backup_arctic_to_parquet.py  backup_db_to_csv.py  backup_files.py  backup_mongo_data_as_dump.py  backup_parquet_data_to_remote.py  backup_state_files.py  clean_truncate_backtest_states.py  clean_truncate_echo_files.py  clean_truncate_log_files.py  email_daily_pandl_report.py  email_reconcile_report.py  email_roll_report.py  email_status_report.py  email_trades_report.py  example_run_system.py  functions.py  get_fx_prices.py  get_roll_info.py  interactive_controls.py  interactive_diagnostics.py  interactive_manual_check_fx_prices.py  interactive_manual_check_historical_prices.py  interactive_order_stack.py  interactive_roll_info.py  interactive_update_capital_manual.py  interactive_update_roll_status.py  readFxPrices.py  roll_schedule_summary.py  run_backups.py  run_capital_update.py  run_cleaners.py  run_daily_fx_and_contract_updates.py  run_daily_price_updates.py  run_daily_update_multiple_adjusted_prices.py  run_process.py  run_reports.py  run_stack_handler.py  run_strategy_order_generator.py  run_systems.py  (+19 more)
sysquant/: fitting_dates.py  portfolio_risk.py  returns.py
systems/: DONE_TO_DO  account.py  accounts_inputs.py  basesystem.py  buffering.py  defaults.py  diagoutput.py  forecast_combine.py  forecast_mapping.py  forecast_scale_cap.py  forecasting.py  output_system.py  portfolio.py  positionsizing.py  rawdata.py  risk.py  risk_overlay.py  setup.py  stage.py  subsystem.py  system_cache.py  trading_rules.py
(+1982 files in other folders)
